# Document-Q-A-RAG-App-With-Gemma-And-Groq-API

./: app.py  pyproject.toml  requirements.txt
